--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <title>DailySunnah</title>
 </head>
 <body>
-  <p>DailySunnah – Islam-App mit Gebetszeiten und Qibla-Finder.</p>
+  <p>DailySunnah – Diese Seite dient lediglich als Platzhalter.</p>
 </body>
 </html>
-
-
 
