--- a/index.html
+++ b/index.html
@@ -1,10 +1,233 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-  <title>DailySunnah</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DailySunnah - Dein digitaler Begleiter für den Islam</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        .gradient-text {
+            background: linear-gradient(90deg, #046A38, #0A5C36);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+        .feature-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
-<body>
-  <p>DailySunnah – Diese Seite dient lediglich als Platzhalter.</p>
+<body class="bg-gray-50 font-sans">
+    <!-- Header -->
+    <header class="bg-white shadow-sm">
+        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <div class="flex items-center">
+                <i class="fas fa-mosque text-2xl text-green-700 mr-3"></i>
+                <h1 class="text-2xl font-bold gradient-text">DailySunnah</h1>
+            </div>
+            <nav class="hidden md:flex space-x-8">
+                <a href="#features" class="text-gray-700 hover:text-green-700">Funktionen</a>
+                <a href="#why" class="text-gray-700 hover:text-green-700">Warum DailySunnah?</a>
+                <a href="#download" class="text-gray-700 hover:text-green-700">Download</a>
+            </nav>
+            <button class="md:hidden text-gray-700">
+                <i class="fas fa-bars text-xl"></i>
+            </button>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="container mx-auto px-6 py-16 md:py-24">
+        <div class="max-w-3xl mx-auto text-center">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-6">Dein digitaler Begleiter für den Islam</h1>
+            <p class="text-lg text-gray-600 mb-8">
+                Diese App dient zur freiheitlichen Nutzung aller digitalen Lern- und Hilfsmittel rund um den Islam - ohne störende Werbung oder kostenpflichtige Abonnements. Damit möchten wir unserer Ummah eine angenehme und benutzerfreundliche App zur Verfügung stellen, die uns allen im Alltag unterstützt und unser Wissen über den Islam vertieft.
+            </p>
+            <div class="flex justify-center space-x-4">
+                <a href="#download" class="bg-green-700 hover:bg-green-800 text-white px-6 py-3 rounded-lg flex items-center">
+                    <i class="fab fa-apple mr-2"></i> App Store
+                </a>
+                <a href="#download" class="bg-gray-800 hover:bg-gray-900 text-white px-6 py-3 rounded-lg flex items-center">
+                    <i class="fab fa-google-play mr-2"></i> Play Store
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="bg-white py-16">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold text-center text-gray-800 mb-16">Funktionen im Überblick</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="feature-card bg-white p-8 rounded-xl shadow-md transition-all duration-300">
+                    <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i class="fas fa-clock text-green-700 text-2xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">Präzise Gebetszeiten</h3>
+                    <p class="text-gray-600">Pünktlich beten, angepasst an deinen Standort.</p>
+                </div>
+                <div class="feature-card bg-white p-8 rounded-xl shadow-md transition-all duration-300">
+                    <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i class="fas fa-compass text-green-700 text-2xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">Qibla-Finder</h3>
+                    <p class="text-gray-600">Die Richtung zur Kaaba in Sekundenschnelle finden.</p>
+                </div>
+                <div class="feature-card bg-white p-8 rounded-xl shadow-md transition-all duration-300">
+                    <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i class="fas fa-question-circle text-green-700 text-2xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">Lehrreiche Quizze</h3>
+                    <p class="text-gray-600">Dein Wissen über den Islam spielerisch vertiefen.</p>
+                </div>
+                <div class="feature-card bg-white p-8 rounded-xl shadow-md transition-all duration-300">
+                    <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i class="fas fa-bell text-green-700 text-2xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">Tägliche Erinnerungen</h3>
+                    <p class="text-gray-600">Inspiration mit Koran-Versen, Hadithen und mehr.</p>
+                </div>
+                <div class="feature-card bg-white p-8 rounded-xl shadow-md transition-all duration-300">
+                    <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i class="fas fa-paint-brush text-green-700 text-2xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">Intuitives Design</h3>
+                    <p class="text-gray-600">Optimiert für ein einfaches und angenehmes Erlebnis.</p>
+                </div>
+                <div class="feature-card bg-white p-8 rounded-xl shadow-md transition-all duration-300">
+                    <div class="bg-green-100 w-16 h-16 rounded-full flex items-center justify-center mb-6">
+                        <i class="fas fa-book-quran text-green-700 text-2xl"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-3">Quran & Hadithe</h3>
+                    <p class="text-gray-600">Vollständiger Quran mit Übersetzungen und authentische Hadithe.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why DailySunnah Section -->
+    <section id="why" class="py-16 bg-gray-100">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold text-center text-gray-800 mb-16">Warum DailySunnah?</h2>
+            <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white p-8 rounded-xl shadow-md">
+                    <div class="flex items-start mb-4">
+                        <div class="bg-green-100 p-3 rounded-full mr-4">
+                            <i class="fas fa-dollar-sign text-green-700"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold">Kostenlos</h3>
+                            <p class="text-gray-600 mt-1">Alle Funktionen ohne versteckte Kosten.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md">
+                    <div class="flex items-start mb-4">
+                        <div class="bg-green-100 p-3 rounded-full mr-4">
+                            <i class="fas fa-ad text-green-700"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold">Werbefrei</h3>
+                            <p class="text-gray-600 mt-1">Fokus auf deinen Glauben, ohne Ablenkungen.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md">
+                    <div class="flex items-start mb-4">
+                        <div class="bg-green-100 p-3 rounded-full mr-4">
+                            <i class="fas fa-check-circle text-green-700"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold">Authentisch</h3>
+                            <p class="text-gray-600 mt-1">Sorgfältig geprüfte Inhalte.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md">
+                    <div class="flex items-start mb-4">
+                        <div class="bg-green-100 p-3 rounded-full mr-4">
+                            <i class="fas fa-lock text-green-700"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold">Datenschutz</h3>
+                            <p class="text-gray-600 mt-1">Keine Speicherung persönlicher Daten – deine Privatsphäre zählt.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md md:col-span-2">
+                    <div class="flex items-start mb-4">
+                        <div class="bg-green-100 p-3 rounded-full mr-4">
+                            <i class="fas fa-users text-green-700"></i>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold">Für die Ummah</h3>
+                            <p class="text-gray-600 mt-1">Gemeinsam wachsen und das Wissen über den Islam fördern.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Download Section -->
+    <section id="download" class="py-16 bg-green-700 text-white">
+        <div class="container mx-auto px-6 text-center">
+            <h2 class="text-3xl font-bold mb-6">Lade DailySunnah jetzt herunter</h2>
+            <p class="text-xl mb-10 max-w-2xl mx-auto">Beginne deine Reise mit einer App, die deinen Glauben stärkt und dein Wissen erweitert.</p>
+            <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6">
+                <a href="#" class="bg-white text-green-700 hover:bg-gray-100 px-8 py-4 rounded-lg flex items-center justify-center sm:justify-start">
+                    <i class="fab fa-apple text-2xl mr-3"></i>
+                    <div class="text-left">
+                        <div class="text-xs">Download im</div>
+                        <div class="font-bold">App Store</div>
+                    </div>
+                </a>
+                <a href="#" class="bg-white text-green-700 hover:bg-gray-100 px-8 py-4 rounded-lg flex items-center justify-center sm:justify-start">
+                    <i class="fab fa-google-play text-2xl mr-3"></i>
+                    <div class="text-left">
+                        <div class="text-xs">Download im</div>
+                        <div class="font-bold">Play Store</div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-white py-12">
+        <div class="container mx-auto px-6">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div>
+                    <h3 class="text-xl font-bold mb-4 flex items-center">
+                        <i class="fas fa-mosque mr-2"></i> DailySunnah
+                    </h3>
+                    <p class="text-gray-400">Dein digitaler Begleiter für den islamischen Glauben.</p>
+                </div>
+                <div>
+                    <h4 class="font-semibold mb-4">Kontakt</h4>
+                    <ul class="space-y-2">
+                        <li class="flex items-center">
+                            <i class="fas fa-envelope mr-2 text-gray-400"></i>
+                            <a href="mailto:info@dailysunnah.app" class="text-gray-400 hover:text-white">info@dailysunnah.app</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="font-semibold mb-4">Rechtliches</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white">Datenschutz</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Nutzungsbedingungen</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border-t border-gray-700 mt-12 pt-8 text-center text-gray-400">
+                <p>&copy; 2023 DailySunnah. Alle Rechte vorbehalten.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
+
 
